Add post service po svc-vin-check, add DB and save the cars to the svn-vin check repo, refine the different pages and fix the layout overall'